--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -283,7 +283,8 @@
 
     <provider android:name=".providers.PartProvider"
               android:grantUriPermissions="true"
-              android:authorities="org.thoughtcrime.provider.securesms" />
+              android:authorities="org.thoughtcrime.provider.securesms"
+              android:exported="false" />
 
     <receiver android:name=".service.RegistrationNotifier"
               android:exported="false">
