--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
     compile 'com.android.support:support-v4:18.0.0'
     compile 'com.google.android.gcm:gcm-client:1.0.2'
+    compile 'com.nhaarman.listviewanimations:library:2.5.2'
 
     compile project(':library')
 }
