--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,8 +5,6 @@
       android:versionCode="69"
       android:versionName="2.0.6">
 
-    <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="19"/>
-
     <permission android:name="org.thoughtcrime.securesms.ACCESS_SECRETS"
                 android:label="Access to TextSecure Secrets"
                 android:protectionLevel="signature" />
@@ -71,7 +69,7 @@
                 <data android:mimeType="image/*" />
                 <data android:mimeType="text/plain" />
                 <data android:mimeType="video/*" />
-            </intent-filter>            
+            </intent-filter>
 
         </activity>
 
@@ -93,10 +91,17 @@
     <activity android:name=".MmsPreferencesActivity"
                android:configChanges="touchscreen|keyboard|keyboardHidden|orientation|screenLayout|screenSize"/>
 
-    <activity android:name=".ConversationListActivity"
-              android:label="@string/app_name"
+    <activity android:name=".ShareActivity"
+              android:excludeFromRecents="true"
               android:launchMode="singleTask"
+              android:noHistory="true"
+              android:windowSoftInputMode="stateHidden"
               android:configChanges="touchscreen|keyboard|keyboardHidden|orientation|screenLayout|screenSize"/>
+
+    <activity android:name=".ConversationListActivity"
+          android:label="@string/app_name"
+          android:launchMode="singleTask"
+          android:configChanges="touchscreen|keyboard|keyboardHidden|orientation|screenLayout|screenSize"/>
 
     <activity android:name=".ConversationActivity"
               android:windowSoftInputMode="stateUnchanged"
@@ -126,7 +131,7 @@
     <activity android:name=".PassphrasePromptActivity"
               android:label="@string/AndroidManifest__enter_passphrase"
               android:launchMode="singleTop"
-              android:theme="@style/NoAnimation.Theme.Sherlock.Light.DarkActionBar"              
+              android:theme="@style/NoAnimation.Theme.Sherlock.Light.DarkActionBar"
               android:windowSoftInputMode="stateUnchanged"
               android:configChanges="touchscreen|keyboard|keyboardHidden|orientation|screenLayout|screenSize"/>
 
