--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -98,9 +98,12 @@
               android:launchMode="singleTask"
               android:configChanges="touchscreen|keyboard|keyboardHidden|orientation|screenLayout|screenSize"/>
 
-    <activity android:name=".ConversationActivity"
-              android:windowSoftInputMode="stateUnchanged"
+    <activity android:name=".MediaPreviewActivity"
               android:configChanges="touchscreen|keyboard|keyboardHidden|orientation|screenLayout|screenSize"/>
+
+    <activity android:name=".ConversationActivity"
+          android:windowSoftInputMode="stateUnchanged"
+          android:configChanges="touchscreen|keyboard|keyboardHidden|orientation|screenLayout|screenSize"/>
 
     <activity android:name=".GroupCreateActivity"
               android:windowSoftInputMode="stateVisible"
