--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ repositories {
 
 dependencies {
     compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
+    compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.android.support:support-v4:19.0.1'
     compile 'com.google.android.gcm:gcm-client:1.0.2'
 
