--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -123,12 +123,17 @@
               android:launchMode="singleTask"
               android:configChanges="touchscreen|keyboard|keyboardHidden|orientation|screenLayout|screenSize"/>
 
-    <activity android:name=".PassphraseCreateActivity"
-              android:label="@string/AndroidManifest__create_passphrase"
-              android:windowSoftInputMode="stateUnchanged"
-              android:theme="@style/TextSecure.IntroTheme"
-              android:launchMode="singleTop"
+    <activity android:name=".EncryptedBackupImportActivity"
+              android:theme="@style/NoAnimation.Theme.Sherlock.Light.DarkActionBar"
+              android:launchMode="singleTask"
               android:configChanges="touchscreen|keyboard|keyboardHidden|orientation|screenLayout|screenSize"/>
+
+    <activity android:name=".PassphraseCreateActivity"
+          android:label="@string/AndroidManifest__create_passphrase"
+          android:windowSoftInputMode="stateUnchanged"
+          android:theme="@style/TextSecure.IntroTheme"
+          android:launchMode="singleTop"
+          android:configChanges="touchscreen|keyboard|keyboardHidden|orientation|screenLayout|screenSize"/>
 
     <activity android:name=".PassphrasePromptActivity"
               android:label="@string/AndroidManifest__enter_passphrase"
