--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     compile 'org.whispersystems:jobmanager:0.11.0'
     compile 'org.whispersystems:libpastelog:1.0.6'
     compile 'org.whispersystems:textsecure-android:1.2.2'
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.1.2'
 
     androidTestCompile 'com.google.dexmaker:dexmaker:1.2'
     androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.2'
