make debug builds have a different applicationId
Also modify permissions and provider authority namespaces to be relative
to the package name.

// FREEBIE

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,11 +5,11 @@
       android:versionCode="108"
       android:versionName="2.10.1">
 
-    <permission android:name="org.thoughtcrime.securesms.ACCESS_SECRETS"
+    <permission android:name="${applicationId}.ACCESS_SECRETS"
                 android:label="Access to TextSecure Secrets"
                 android:protectionLevel="signature" />
 
-    <uses-permission android:name="org.thoughtcrime.securesms.ACCESS_SECRETS"/>
+    <uses-permission android:name="${applicationId}.ACCESS_SECRETS"/>
     <uses-permission android:name="android.permission.READ_PROFILE"/>
     <uses-permission android:name="android.permission.WRITE_PROFILE"/>
     <uses-permission android:name="android.permission.BROADCAST_WAP_PUSH"
@@ -299,11 +299,11 @@
 
     <provider android:name=".providers.PartProvider"
               android:grantUriPermissions="true"
-              android:authorities="org.thoughtcrime.provider.securesms" />
+              android:authorities="${applicationId}.provider.part" />
 
     <provider android:name=".providers.MmsBodyProvider"
               android:grantUriPermissions="true"
-              android:authorities="org.thoughtcrime.provider.securesms.mms" />
+              android:authorities="${applicationId}.provider.mms" />
 
     <receiver android:name=".service.RegistrationNotifier"
               android:exported="false">
